# ml-research-template

./: .gitignore  404.html  DENNYS_RULES.md  Dockerfile  README.md  copier.yml  demo.tape  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
cheatsheet/: index.html
configs/: eval.yaml  train.yaml
configs/experiment/: example.yaml
configs/hparams_search/: optuna.yaml
configs/logger/: aim.yaml  csv.yaml  tensorboard.yaml  wandb.yaml
configs/model/: default.yaml
configs/trainer/: default.yaml
demo/: app.py
docs/: cheatsheet.md  getting-started.md  index.md  rules.md  stack.md  tour.md  tutorial.md  updating.md
docs/api/: data.md  models.md  utils.md
docs/stylesheets/: extra.css
docs/workflows/: configs.md  jax.md  multi-seed-stats.md  multimodal.md  resume-checkpointing.md  slurm.md  stats-explained.md  sweeps.md  tabular-benchmarking.md  tracking.md  training.md
getting-started/: index.html
javascripts/: interactive.js
scripts/: aggregate_seeds.py  run_seeds.sh
search/: search_index.json
src/my_project/: eval.py  train.py
stack/: index.html
stylesheets/: extra.css
template/: .gitignore  .pre-commit-config.yaml  Dockerfile.jinja  README.md.jinja  pyproject.toml.jinja  {% if include_dennys_rules %}DENNYS_RULES.md{% endif %}  {% if include_example %}mkdocs.yml{% endif %}.jinja  {{ _copier_conf.answers_file }}.jinja
template/.devcontainer/: devcontainer.json
template/configs/: local.yaml.jinja  train.yaml.jinja  {% if flavor == 'tabular' %}benchmark.yaml{% endif %}.jinja
template/scripts/: aggregate_seeds.py.jinja  run_seeds.sh.jinja  sbatch_seeds.sh.jinja  sbatch_train.sh.jinja  sweep.py.jinja  tune.py.jinja  {% if flavor == 'tabular' %}aggregate_benchmark.py{% endif %}.jinja  {% if flavor == 'tabular' %}run_benchmark.sh{% endif %}.jinja  {% if flavor == 'tabular' %}sbatch_benchmark.sh{% endif %}.jinja
template/tests/: test_cli.py.jinja  {% if flavor == 'tabular' %}test_codever.py{% endif %}.jinja  {% if flavor == 'tabular' %}test_tabular.py{% endif %}.jinja  {% if include_example %}test_model.py{% endif %}.jinja  {% if include_example and framework == 'jax' %}test_model.py{% endif %}.jinja  {% if include_example and framework == 'pytorch' %}test_model.py{% endif %}.jinja
template/{% if include_example %}demo{% endif %}/: app.py.jinja
template/{% if include_example %}docs{% endif %}/: index.md.jinja
tests/: test_model.py
tour/: index.html
tutorial/: index.html
updating/: index.html
workflows/configs/: index.html
(+74 files in other folders)
